--- a/files/requirements.txt
+++ b/files/requirements.txt
@@ -8,6 +8,10 @@ attrs==21.4.0
     # via jsonschema
 click==7.1.2
     # via typer
+colorama==0.4.4
+    # via rich
+commonmark==0.9.1
+    # via rich
 dotenv-stripout==0.1.0
     # via -r files/requirements.in
 ipython-genutils==0.2.0
@@ -20,8 +24,12 @@ nbformat==5.1.3
     # via nbstripout
 nbstripout==0.5.0
     # via -r files/requirements.in
+pygments==2.11.2
+    # via rich
 pyrsistent==0.18.1
     # via jsonschema
+rich==11.2.0
+    # via -r files/requirements.in
 traitlets==5.1.1
     # via
     #   jupyter-core
