--- a/files/requirements.txt
+++ b/files/requirements.txt
@@ -14,16 +14,26 @@ commonmark==0.9.1
     # via rich
 dotenv-stripout==0.1.0
     # via -r files/requirements.in
+flake8==4.0.1
+    # via -r files/requirements.in
 ipython-genutils==0.2.0
     # via nbformat
+isort==5.10.1
+    # via -r files/requirements.in
 jsonschema==4.4.0
     # via nbformat
 jupyter-core==4.9.2
     # via nbformat
+mccabe==0.6.1
+    # via flake8
 nbformat==5.1.3
     # via nbstripout
 nbstripout==0.5.0
     # via -r files/requirements.in
+pycodestyle==2.8.0
+    # via flake8
+pyflakes==2.4.0
+    # via flake8
 pygments==2.11.2
     # via rich
 pyrsistent==0.18.1
