add nvm and anki

--- a/files/Brewfile
+++ b/files/Brewfile
@@ -5,8 +5,9 @@ brew "httpie"
 brew "jq"
 brew "jrnl"
 brew "node"
+brew "nvm"
 brew "pip-tools"
-brew "python@3.8"
+brew "python@3.10"
 brew "rbenv"
 brew "sqlite"
 brew "starship"
