--- a/files/Brewfile
+++ b/files/Brewfile
@@ -1,7 +1,11 @@
 tap "sniptt-official/tap"
 brew "snip"
 
+tap "hashicorp/tap"
+brew "hashicorp/tap/terraform"
+
 brew "awscli"
+brew "deno"
 brew "gh"
 brew "httpie"
 brew "jq"
